# OpenGL-Project

./: .gitignore  CMakeLists.txt  README.md
Models/: Dragon.glb
Shaders/: fragmentShader.glsl  lightFragmentShader.glsl  lightVertexShader.glsl  nightFragmentShader.glsl  objectFragmentShader.glsl  vertexShader.glsl
include/: Camera.h  IndexBuffer.h  Mesh.h  Model.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Camera.cpp  IndexBuffer.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  Window.cpp  main.cpp
